--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "firebase": "^8.2.3",
-    "gatsby": "^2.26.1",
+    "gatsby": "^3.0.0-next.0",
     "gatsby-image": "^2.10.0",
+    "gatsby-plugin-clarity": "^1.0.0",
     "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-google-gtag": "^2.6.0",
     "gatsby-plugin-react-helmet": "^3.9.0",
