--- a/package.json
+++ b/package.json
@@ -18,20 +18,17 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "firebase": "^8.2.3",
-    "gatsby": "^3.0.0-next.0",
-    "gatsby-image": "^2.10.0",
-    "gatsby-plugin-clarity": "^1.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "firebase": "^10.4.0",
+    "gatsby": "^5.12.5",
+    "gatsby-plugin-clarity": "^1.0.1",
     "gatsby-plugin-firebase": "^0.2.0-beta.4",
-    "gatsby-plugin-google-gtag": "^2.6.0",
-    "gatsby-plugin-react-helmet": "^3.9.0",
-    "gatsby-plugin-sass": "^3.1.0",
-    "gatsby-plugin-sharp": "^2.13.0",
-    "gatsby-transformer-sharp": "^2.11.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "gatsby-plugin-google-gtag": "^5.12.0",
+    "gatsby-plugin-react-helmet": "^6.1.0",
+    "gatsby-plugin-sass": "^6.12.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "sass": "^1.32.4"
+    "sass": "^1.68.0"
   }
 }
